front-page adjustments, began "about me" section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo">
+                <h2 class="logo">Mark Fortes</h2>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -20,9 +20,32 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-
+            <div class="header-text">
+                <p>CS @ Northwestern University</p>
+                <br>
+                <img class= "me-img" src="images/me1.jpg" alt="me">
+                <h1>Hi, I'm <span>Mark Fortes!</span></h1>
+            </div>
         </div>
-
+    </div>
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="images/user.png">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">About Me</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                         Praesent malesuada fringilla massa. Donec et nibh dapibus, aliquam nulla sed,
+                          faucibus nisl. Praesent mauris enim, consequat id est eu, congue vehicula ipsum.
+                           Pellentesque id pharetra mauris. Ut mauris sem, semper at lobortis in,
+                            sollicitudin vulputate tellus. Sed eleifend, nulla in interdum egestas, erat
+                             neque iaculis velit, sed blandit turpis nulla eget tellus. </p>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
